# xbb

./: .env  Cargo.toml  Rocket.toml
src/: main.rs
src/calendar/: mock.json  mod.rs
src/db/: calendar.rs  equipment.rs  hero.rs  mod.rs
src/equipment/: mod.rs
src/hero/: mock.json  mod.rs
src/models/: calendar.rs  equipment.rs  hero.rs
src/my_equipment/: mock.json  mod.rs
src/routes/: calendar.rs  equipment.rs  hero.rs  mod.rs
