[package]
name = "xbb_start_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.28"
mongodb = "2.7.0"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.189", features = ["derive"] }
